# nir-superellipse

./: .gitmodules
builds/: nir-superellipse-15-02-2023.uf2  nir-superellipse-20-02-2023.uf2  nir-superellipse_pin29_demo_400leds.uf2  nir-superellipse_rgb_mode_for_one_led_with_encoders_and_displays.uf2
code/: CMakeLists.txt  cfgs.h  main.c  main.h  pins.h
code/bsp/: hardware.c  hardware.h  ws2812.pio
code/drivers/st7789-driver/: st7789-colors.h  st7789-driver-private.h  st7789-driver.c  st7789-driver.h  st7789-font-default.c  st7789-font-default.h  st7789-font.c  st7789-font.h
code/drivers/ws2812-driver/: ws2812-driver.c  ws2812-driver.h
code/tasks/: display-task.c  display-task.h  display_task.c  led-task.c  led-task.h  logic-task.c  logic-task.h  smart-led-task.c  smart-led-task.h
mechanical/: a.SLDPRT  ant-lab.SLDASM  ant-lab.easm  b.SLDPRT  base.SLDPRT  box.SLDPRT  handle.SLDPRT  l.SLDPRT  n.SLDPRT  saver.SLDPRT  screen.SLDPRT  t.SLDPRT
mechanical/dxf/: a.DXF  b.DXF  base-bottom.DXF  base-top.DXF  l.DXF  n.DXF  t.DXF
mechanical/slddrw/: a.SLDDRW  b.SLDDRW  base-bottom.SLDDRW  base-top.SLDDRW  l.SLDDRW  n.SLDDRW  t.SLDDRW
mechanical/stl/: a.STL  b.STL  base.STL  box.STL  l.STL  n.STL  saver.STL  t.STL
pcb/displays/: displays.PcbDoc  displays.PrjPcb  displays.SchDoc  displays.step  displays_with_PBD.step
pcb/displays/Gerber/: displays.GBL  displays.GM1  displaysNoPlane.GBL
pcb/displays/Managed/OutputJobs/25802FFB-992F-4CC7-ADBB-64D3790CFE54/: OUT-0001-A.4.OutJob
pcb/encoders/: encoders.PcbDoc  encoders.PrjPcb  encoders.PrjPcbStructure  encoders.SchDoc  encoders.step
pcb/motherboard/: motherboard.PcbDoc  motherboard.PrjPcb  motherboard.SchDoc  motherboard.step
